Fix z-index not applying

--- a/public/content.css
+++ b/public/content.css
@@ -50,7 +50,7 @@
 }
 
 .sponsorBlockChapterBar:hover {
-	z-index: 41;
+	z-index: 41 !important;
 }
 
 /*  */
